--- a/index.html
+++ b/index.html
@@ -68,6 +68,6 @@
             <div id="footer" class="terminal">
                 <span>&nbsp;></span><span id="field"></span>
         </div>
-            <textarea id="dummy" type="text" class="w3-hide noselect" spellcheck="false"></textarea>
+            <textarea id="dummy" type="text" class="noselect" spellcheck="false"></textarea>
     </body>
 </html>
