--- a/index.html
+++ b/index.html
@@ -65,8 +65,9 @@
             </div>
             <div id="divider2" class="noselect">&nbsp;
             </div>
-            <div id="footer" class="terminal">
+            <div id="footer" class="terminal" onclick="selectBox()">
                 <span>&nbsp;></span><span id="field"></span>
+            </div>
         </div>
             <textarea id="dummy" type="text" class="noselect" spellcheck="false"></textarea>
     </body>
