--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="script.js"></script>
         <script type="text/javascript">
-            window.onload = startup();
+            
         </script>
     </head>
     
@@ -56,9 +56,9 @@
                     <p id="resume" class="button" onclick="accordion('four');">[Resume]</p>
                     <div id="four" class="w3-hide">
                         <ul class="list">
-                            <li>&nbsp;<a id="4a" class="text active foura"></a></li>
-                            <li>&nbsp;<a id="4b" class="text active fourb"></a></li>
-                            <li>&nbsp;<a id="4c" class="text active fourc"></a></li>
+                            <li>&nbsp;<a id="4a" class="text active foura" href="resume.html"></a></li>
+                            <li>&nbsp;<a id="4b" class="text active fourb" target="_blank" href="resume.pdf"></a></li>
+                            <li><!--&nbsp;--><a id="4c" class="text fourc"></a></li>
                         </ul>
                     </div>
                 </div>
