--- a/resume.html
+++ b/resume.html
@@ -15,7 +15,7 @@
             
         </script>
     </head>
-    <body onload="resumeType(texts,30)">
+    <body onload="resumeType(texts,30);startup()">
         <div id="main" class="text">
             <div id="header">
                 <a class="nav" id="back" href="index.html">[Back]</a>
