--- a/info.html
+++ b/info.html
@@ -29,30 +29,30 @@
                     <li><p id="siteNav" class="tab" onclick="expandTab('list1',listIDs)">[Site Navigation]</p>
                         <div id="list1" class="w3-hide">
                             <ul class="bulletless subText">
-                                <li id="i1a"></li>
-                                <li id="i1b"></li>
-                                <li id="i1c"></li>
+                                <li>&nbsp;<a id="i1a" class="smallText"></a></li>
+                                <li>&nbsp;<a id="i1b" class="smallText"></a></li>
+                                <li>&nbsp;<a id="i1c" class="smallText"></a></li>
                             </ul>
                         </div>
                     </li>
                     <li><p id="otherFeat" class="tab" onclick="expandTab('list2',listIDs)">[Other Features]</p>
                         <div id="list2" class="w3-hide">
                             <ul class="bulletless subText">
-                                <li id="i2a"></li>
-                                <li id="i2b"></li>
-                                <li id="i2c"></li>
+                                <li>&nbsp;<a id="i2a" class="smallText"></a></li>
+                                <li>&nbsp;<a id="i2b" class="smallText"></a></li>
+                                <li>&nbsp;<a id="i2c" class="smallText"></a></li>
                             </ul>
                         </div>
                     </li>
                     <li><p id="commands" class="tab" onclick="expandTab('list3',listIDs)">[Commands]</p>
                         <div id="list3" class="w3-hide">
                             <ul class="bulletless subText">
-                                <li id="i3a"></span></li>
-                                    <ul id="i3b" class="smallText bulletless"></ul>
-                                <li id="i3c"></li>
-                                    <ul id="i3d" class="smallText bulletless"></ul>
-                                <li id="i3e"></li>
-                                    <ul id="i3f" class="smallText bulletless"></ul>
+                                <li><a id="i3a" class="smallText"></a></li>
+                                    <ul id="i3b" class="smallText bulletless">&nbsp;</ul>
+                                <li><a id="i3c" class="smallText">&nbsp;</a></li>
+                                    <ul id="i3d" class="smallText bulletless">&nbsp;</ul>
+                                <li><a id="i3e" class="smallText">&nbsp;</a></li>
+                                    <ul id="i3f" class="smallText bulletless">&nbsp;</ul>
                             </ul>
                         </div>
                     </li>
