--- a/index_old.html
+++ b/index_old.html
@@ -53,7 +53,7 @@
                     <p id="resume" class="button" onclick="accordion('four');">[Resume]</p>
                     <div id="four" class="w3-hide">
                         <ul class="list">
-                            <li>&nbsp;<a id="4a" class="text active foura" href="resume.html"></a></li>
+                            <li>&nbsp;<a id="4a" class="text active foura" href="resume2.html"></a></li>
                             <li>&nbsp;<a id="4b" class="text active fourb" target="_blank" href="resume.pdf"></a></li>
                             <li><!--&nbsp;--><a id="4c" class="text fourc"></a></li>
                         </ul>
