--- a/info.html
+++ b/info.html
@@ -7,16 +7,14 @@
         <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/8/89/Antu_x-terminal-emulator.svg">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <link rel="stylesheet" type="text/css" href="style.css">
-        <link rel="stylesheet" type="text/css" href="info.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="script.js"></script>
         <script src="info.js"></script>
-        <script src="resume.js"></script>
     </head>
     <body onload="startup()">
-        <div id="infoPage" class="text noselect">
+        <div class="page text noselect">
             <div>
-                <div id="iHeader">
+                <div class="header">
                     <div id="infoTitle" class="titleText">
                         <p>██╗███╗   &nbsp;&nbsp;██╗███████╗ ██████╗</p>
                         <p>██║████╗  &nbsp;██║██╔════╝██╔═══██╗</p>
