--- a/info.html
+++ b/info.html
@@ -5,7 +5,6 @@
         <title>Welcome</title>
         <!--<meta name="viewport" content="width=device-width, initial-scale=1.0">-->
         <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
-        <link rel="icon" href="https://upload.wikimedia.org/wikipedia/commons/8/89/Antu_x-terminal-emulator.svg">
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <link rel="stylesheet" type="text/css" href="style.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -53,6 +52,8 @@
                                 <span><ul id="i3d" class="smallText bulletless"></ul></span>
                                 <li>&nbsp;<a id="i3e" class="smallText"></a></li>
                                 <span><ul id="i3f" class="smallText bulletless"></ul></span>
+                                <li>&nbsp;<a id="i3g" class="smallText"></a></li>
+                                <span><ul id="i3h" class="smallText bulletless"></ul></span>
                             </ul>
                         </div>
                     </li>
