--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <div id="mList2" class="w3-hide">
                             <ul class="bulletless subText">
                                 <li>&nbsp;<a id="m2a" class="smallText active" href="clock.html"></a></li>
-                                <li>&nbsp;<a id="m2b" class="smallText active"></a></li>
+                                <li>&nbsp;<a id="m2b" class="smallText active" href="https://github.com/bradleylee16/bradleylee16.github.io"></a></li>
                                 <li>&nbsp;<a id="m2c" class="smallText"></a></li>
                             </ul>
                         </div>
@@ -63,7 +63,7 @@
             </div>
         </div>
         <div id="footer" class="terminal" onclick="selectBox()">
-            <span class="noselect">&nbsp;></span><span id="field"></span>
+            <span class="noselect">&nbsp;></span><span id="field"></span><span id="cursor"></span>
         </div>
         <textarea id="dummy" type="text" class="noselect" spellcheck="false"></textarea>
     </body>
