--- a/info.html
+++ b/info.html
@@ -47,13 +47,13 @@
                         <div id="list3" class="w3-hide">
                             <ul class="bulletless subText">
                                 <li>&nbsp;<a id="i3a" class="smallText"></a></li>
-                                <span><ul id="i3b" class="smallText bulletless"></ul></span>
+                                <span><ul id="i3b" class="smallerText bulletless"></ul></span>
                                 <li>&nbsp;<a id="i3c" class="smallText"></a></li>
-                                <span><ul id="i3d" class="smallText bulletless"></ul></span>
+                                <span><ul id="i3d" class="smallerText bulletless"></ul></span>
                                 <li>&nbsp;<a id="i3e" class="smallText"></a></li>
-                                <span><ul id="i3f" class="smallText bulletless"></ul></span>
+                                <span><ul id="i3f" class="smallerText bulletless"></ul></span>
                                 <li>&nbsp;<a id="i3g" class="smallText"></a></li>
-                                <span><ul id="i3h" class="smallText bulletless"></ul></span>
+                                <span><ul id="i3h" class="smallerText bulletless"></ul></span>
                             </ul>
                         </div>
                     </li>
@@ -62,7 +62,7 @@
             </div>
         </div>
         <div id="footer" class="terminal" onclick="selectBox()">
-            <span class="noselect">&nbsp;></span><span id="field"></span>
+            <span class="noselect">&nbsp;></span><span id="field"></span><span id="cursor"></span>
         </div>
         <textarea id="dummy" type="text" class="noselect" spellcheck="false"></textarea>
     </body>
