--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 <ul class="bulletless mainText">
                     <li><p id="about" class="tab" onclick="expandTab('mList1',mListIDs)">[About]</p>
                         <div id="mList1" class="w3-hide">
-                            <ul class="bulletless subText">
+                            <ul class="bulletless subText fakeBulletList">
                                 <li>&nbsp;<a id="m1a" class="smallText"></a></li>
                                 <li>&nbsp;<a id="m1b" class="smallText"></a></li>
                                 <li>&nbsp;<a id="m1c" class="smallText active" href="info.html"></a></li>
@@ -36,7 +36,7 @@
                     </li>
                     <li><p id="projects" class="tab" onclick="expandTab('mList2',mListIDs)">[Projects]</p>
                         <div id="mList2" class="w3-hide">
-                            <ul class="bulletless subText">
+                            <ul class="bulletless subText fakeBulletList">
                                 <li>&nbsp;<a id="m2a" class="smallText active" href="clock.html"></a></li>
                                 <li>&nbsp;<a id="m2b" class="smallText active" href="https://github.com/bradleylee16/bradleylee16.github.io"></a></li>
                                 <li>&nbsp;<a id="m2c" class="smallText"></a></li>
@@ -45,7 +45,7 @@
                     </li>
                     <li><p id="contact" class="tab" onclick="expandTab('mList3',mListIDs)">[Contact]</p>
                         <div id="mList3" class="w3-hide">
-                            <ul class="bulletless subText">
+                            <ul class="bulletless subText fakeBulletList">
                                 <li>&nbsp;<a id="m3a" class="smallText"></a></li>
                                 <li>&nbsp;<a id="m3b" class="smallText active" href="https://www.linkedin.com/in/dong-hun-lee"></a></li>
                             </ul>
@@ -53,7 +53,7 @@
                     </li>
                     <li><p id="resume" class="tab" onclick="expandTab('mList4',mListIDs)">[Resume]</p>
                         <div id="mList4" class="w3-hide">
-                            <ul class="bulletless subText">
+                            <ul class="bulletless subText fakeBulletList">
                                 <li>&nbsp;<a id="m4a" class="smallText active" href="resume.html"></a></li>
                                 <li>&nbsp;<a id="m4b" class="smallText active" href="resume.pdf"></a></li>
                             </ul>
@@ -66,5 +66,8 @@
             <span class="noselect">&nbsp;></span><span id="field"></span><span id="cursor"></span>
         </div>
         <textarea id="dummy" type="text" class="noselect" spellcheck="false"></textarea>
+        <div data-video="QEQFdd_qg_w" data-autoplay="0" data-loop="1" id="youtube-audio" class="w3-hide"></div>
+        <script src="https://www.youtube.com/iframe_api"></script>
+        <script src="https://cdn.rawgit.com/labnol/files/master/yt.js"></script>
     </body>
 </html>
