--- a/resume.html
+++ b/resume.html
@@ -93,6 +93,9 @@
             <span class="noselect">&nbsp;></span><span id="field"></span><span id="cursor"></span>
         </div>
         <textarea id="dummy" type="text" class="noselect" spellcheck="false"></textarea>
+        <div data-video="QEQFdd_qg_w" data-autoplay="0" data-loop="1" id="youtube-audio" class="w3-hide"></div>
+        <script src="https://www.youtube.com/iframe_api"></script>
+        <script src="https://cdn.rawgit.com/labnol/files/master/yt.js"></script>
     </body>
 </html>
 
