--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                             <ul class="bulletless subText fakeBulletList">
                                 <li>&nbsp;<a id="m1a" class="smallText"></a></li>
                                 <li>&nbsp;<a id="m1b" class="smallText"></a></li>
-                                <li>&nbsp;<a id="m1c" class="smallText active" href="info.html"></a></li>
+                                <li>&nbsp;<a id="m1c" class="smallText"></a></li>
                             </ul>
                         </div>
                     </li>
@@ -58,6 +58,8 @@
                                 <li>&nbsp;<a id="m4b" class="smallText active" href="resume.pdf"></a></li>
                             </ul>
                         </div>
+                    </li>
+                    <li><p id="info" class="tab" onclick="document.getElementById('link1').click()">[Info]<span><a id="link1" href="info.html"></a></span></p>
                     </li>
                 </ul>
             </div>
