clock.js refactor, brought info up to date

--- a/clock.html
+++ b/clock.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <script src="clock.js"></script>
     </head>
-    <body onload="displayTime()">
+    <body onload="displayTime2()">
         <br>
         <br>
         <div id="main">
@@ -17,7 +17,7 @@
                 <span id="it" class="text lit">IT&nbsp;</span>
                 <span id="is" class="text lit">IS&nbsp;&nbsp;</span>
                 <span id="30" class="text">HALF&nbsp;</span>
-                <span id="10" class="text">TEN</span>
+                <span id="10m" class="text">TEN</span>
                 <br>
                 <span id="15" class="text">QUARTER&nbsp;&nbsp;</span>
                 <span id="20" class="text">TWENTY</span>
