--- a/resume.html
+++ b/resume.html
@@ -30,7 +30,6 @@
                         <li><p id="skills" class="tab" onclick="expandTab('rList2',rListIDs)">[Skills]</p></li>
                         <li><p id="projects" class="tab" onclick="expandTab('rList3',rListIDs)">[Projects]</p></li>
                         <li><p id="experience" class="tab" onclick="expandTab('rList4',rListIDs)">[Experience]</p></li>
-                        <li><p id="pdf" class="tab" onclick="document.location.href='resume.pdf';">[PDF Version]</p></li>
                         <li><p id="resumeBack" class="tab" onclick="document.location.href='index.html';">[Back]</p></li>
                     </ul>
                 </div>
@@ -39,7 +38,6 @@
                         <ul class="subText">
                             <li><a id="r1b" class="smallText"></a></li>
                             <li><a id="r1c" class="smallText"></a></li>
-                            <li><a id="r1d" class="smallText"></a></li>
                         </ul>
                     </div>
                     <div id="rList2" class="w3-hide">
@@ -76,13 +74,12 @@
                                 <li><a id="r4e" class="smallerText"></a></li>
                                 <li><a id="r4f" class="smallerText"></a></li>
                                 <li><a id="r4g" class="smallerText"></a></li>
+                                <li><a id="r4h" class="smallerText"></a></li>
                             </ul>
-                            <li>&nbsp;<a id="r4h" class="smallText"></a></li>
+                            <li>&nbsp;<a id="r4i" class="smallText"></a></li>
                             <ul class="subText">
-                                <li><a id="r4i" class="smallerText"></a></li>
                                 <li><a id="r4j" class="smallerText"></a></li>
                                 <li><a id="r4k" class="smallerText"></a></li>
-                                <li><a id="r4l" class="smallerText"></a></li>
                             </ul>
                         </ul>
                     </div>
