--- a/clock.html
+++ b/clock.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
         <script src="clock.js"></script>
     </head>
-    <body onload="displayTime2()">
+    <body onload="displayTime()">
         <br>
         <br>
         <div id="main">
